# hc_test_app

./: Cargo.toml  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: release-tauri-app.yaml  test.yaml
dnas/forum/workdir/: dna.yaml
dnas/forum/zomes/coordinator/posts/: Cargo.toml
dnas/forum/zomes/coordinator/posts/src/: all_posts.rs  comment.rs  lib.rs  post.rs
dnas/forum/zomes/integrity/posts/: Cargo.toml
dnas/forum/zomes/integrity/posts/src/: comment.rs  lib.rs  post.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/: package.json  vitest.config.ts
tests/src/forum/posts/: all-posts.test.ts  comment.test.ts  common.ts  post.test.ts
ui/: index.html  package.json  vite.config.ts
ui/src/: App.tsx  ClientContext.tsx  main.tsx
ui/src/forum/posts/: AllPosts.tsx  CommentDetail.tsx  CommentsForPost.tsx  CreateComment.tsx  CreatePost.tsx  EditPost.tsx  PostDetail.tsx  types.ts
workdir/: happ.yaml  web-happ.yaml
