[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "src-tauri"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.5.2"
hdk = "=0.4.2"
serde = "1.0"

[workspace.dependencies.posts]
path = "dnas/forum/zomes/coordinator/posts"

[workspace.dependencies.posts_integrity]
path = "dnas/forum/zomes/integrity/posts"
